@@ -60,6 +60,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #14798: Fix the functions in pyclbr to raise an ImportError
+  when the first part of a dotted name is not a package. Patch by
+  Xavier de Gaye.
+
 - Issue #14832: fixed the order of the argument references in the error
   message produced by unittest's assertItemsEqual.
 
